# goat_project

./: README.md
ros2_ws7/: comands.txt  trajectory_last_30s.csv  trajectory_last_60s.csv
ros2_ws7/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros2_ws7/install/bring_up_anscer/share/bring_up_anscer/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros2_ws7/install/bring_up_anscer/share/bring_up_anscer/launch/: combined.launch.py
ros2_ws7/log/: latest_build
ros2_ws7/src/bring_up_anscer/: CMakeLists.txt
ros2_ws7/src/bring_up_anscer/launch/: combined.launch.xml
ros2_ws7/src/custom_interfaces_anscer/: CMakeLists.txt  package.xml
ros2_ws7/src/my_py_pkg_anscer/: setup.cfg  setup.py
ros2_ws7/src/my_py_pkg_anscer/my_py_pkg_anscer/: path_drawer.py
ros2_ws7/trajectories/: trajectory_Time(nanoseconds=1744093537345975886, clock_type=ROS_TIME)_60s.csv  trajectory_Time(nanoseconds=1744093540175206448, clock_type=ROS_TIME)_60s.csv  trajectory_Time(nanoseconds=1744094380343595607, clock_type=ROS_TIME)_60s.csv  trajectory_Time(nanoseconds=1744094381914349862, clock_type=ROS_TIME)_60s.csv  trajectory_Time(nanoseconds=1744103577704986976, clock_type=ROS_TIME)_120s.csv  trajectory_Time(nanoseconds=1744113859860557581, clock_type=ROS_TIME)_120s.csv
ros2_ws8/install/: local_setup.sh  setup.sh
ros2_ws8/log/: latest_build  latest_list
ros2_ws8/src/goat_interfaces/: CMakeLists.txt
ros2_ws8/src/my_goat_pkg/: package.xml  setup.cfg  setup.py
ros2_ws8/src/my_goat_pkg/my_goat_pkg/: navigator.py  robot_core_logic.py  simple_commander_api_template.py
ros2_ws8/src/testbed_description_goat/: CMakeLists.txt
ros2_ws8/src/testbed_description_goat/launch/: robot_description.launch.py  testbed_rviz_barebones.launch.py
ros2_ws8/src/turtlebot3_gazebo_goat/: CMakeLists.txt
ros2_ws9/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros2_ws9/install/goat_interfaces/share/goat_interfaces/: local_setup.sh  package.dsv  package.sh  package.xml  package.zsh
ros2_ws9/install/goat_interfaces/share/goat_interfaces/cmake/: export_goat_interfaces__rosidl_typesupport_fastrtps_cppExport-noconfig.cmake  goat_interfacesConfig.cmake  goat_interfaces__rosidl_typesupport_cExport-noconfig.cmake  goat_interfaces__rosidl_typesupport_cppExport-noconfig.cmake  goat_interfaces__rosidl_typesupport_cppExport.cmake  goat_interfaces__rosidl_typesupport_introspection_cExport-noconfig.cmake  rosidl_cmake-extras.cmake
ros2_ws9/log/: latest_build
ros2_ws9/src/: robot_core_logic.py
ros2_ws9/src/goat_gazebo/: CMakeLists.txt  package.xml
ros2_ws9/src/goat_interfaces/: CMakeLists.txt
ros2_ws9/src/my_goat_pkg/: package.xml
ros2_ws9/src/testbed_gazebo_goat/: CMakeLists.txt
(+176 files in other folders)
