<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>bring_up_anscer</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="asd@todo.todo">asd</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <exec_depend>custom_interfaces_anscer</exec_depend>
  <exec_depend>my_py_pkg_anscer</exec_depend>
  <exec_depend>turtlebot3_navigation2</exec_depend>
  <exec_depend>turtlebot3_gazebo</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  
 
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
