<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>goat_interfaces</name>
  <version>0.0.0</version>
  <description>Custom interfaces for the Goat project.</description>

  <maintainer email="a93054223@gmail.com">asd</maintainer>
  <license>Apache-2.0</license> <!-- Replace with your actual license -->

  <!-- Build tools -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <!-- Dependencies for building interfaces -->
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <!-- Group interface -->
  <member_of_group>rosidl_interface_packages</member_of_group>

  <!-- Testing (optional, good practice) -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

